--- a/styles/main.css
+++ b/styles/main.css
@@ -24,7 +24,7 @@
   -webkit-background-size: 90%;
   -moz-background-size: 90%;
   -o-background-size: 90%;
-  width: 100%;
+  width: 100vw;
   height: 100vh;
 }
 
